fix URL, clean code